{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 12,
  "lineage": "4ad57b60-8e12-ae02-a390-18323e1b54cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "somu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecfd37f67ebed53e",
            "association_id": "eipassoc-018efc2ed0ffeeb47",
            "domain": "vpc",
            "id": "eipalloc-0ecfd37f67ebed53e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d02d4d0358a74340",
            "private_dns": "ip-10-0-0-144.ap-south-1.compute.internal",
            "private_ip": "10.0.0.144",
            "public_dns": "ec2-15-206-8-144.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.8.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.somu",
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "somu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278365670419:internet-gateway/igw-0190f9d9f02b41cb8",
            "id": "igw-0190f9d9f02b41cb8",
            "owner_id": "278365670419",
            "tags": {
              "name": "my_igw"
            },
            "tags_all": {
              "name": "my_igw"
            },
            "vpc_id": "vpc-0a2bb64171525d92d"
          },
          "dependencies": [
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "somu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecfd37f67ebed53e",
            "association_id": "eipassoc-018efc2ed0ffeeb47",
            "connectivity_type": "public",
            "id": "nat-0f1053c718b42e9c7",
            "network_interface_id": "eni-0d02d4d0358a74340",
            "private_ip": "10.0.0.144",
            "public_ip": "15.206.8.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-012701d07d1bdc90b",
            "tags": {
              "name": "my_nat"
            },
            "tags_all": {
              "name": "my_nat"
            }
          },
          "dependencies": [
            "aws_eip.somu",
            "aws_internet_gateway.somu",
            "aws_subnet.public_subnet",
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278365670419:route-table/rtb-0e5668ad34d258a61",
            "id": "rtb-0e5668ad34d258a61",
            "owner_id": "278365670419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0190f9d9f02b41cb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2bb64171525d92d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.somu",
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sommu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278365670419:route-table/rtb-099b31e8d0f643168",
            "id": "rtb-099b31e8d0f643168",
            "owner_id": "278365670419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0190f9d9f02b41cb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "my_rt"
            },
            "tags_all": {
              "name": "my_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2bb64171525d92d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.somu",
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059793dc78af05305",
            "route_table_id": "rtb-0e5668ad34d258a61",
            "subnet_id": "subnet-015ac3b1d6abf4cf6"
          },
          "dependencies": [
            "aws_internet_gateway.somu",
            "aws_route_table.public_to_private",
            "aws_subnet.private_subnet",
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sommu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0816a3e005ea46728",
            "route_table_id": "rtb-099b31e8d0f643168",
            "subnet_id": "subnet-012701d07d1bdc90b"
          },
          "dependencies": [
            "aws_internet_gateway.somu",
            "aws_route_table.sommu",
            "aws_subnet.public_subnet",
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278365670419:subnet/subnet-015ac3b1d6abf4cf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015ac3b1d6abf4cf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278365670419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a2bb64171525d92d"
          },
          "dependencies": [
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278365670419:subnet/subnet-012701d07d1bdc90b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012701d07d1bdc90b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278365670419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a2bb64171525d92d"
          },
          "dependencies": [
            "aws_vpc.somu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "somu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278365670419:vpc/vpc-0a2bb64171525d92d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2aa5764034679e9",
            "default_route_table_id": "rtb-0f8199dd5d9c69fbb",
            "default_security_group_id": "sg-016b97801491ed776",
            "dhcp_options_id": "dopt-02d255399434ca276",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2bb64171525d92d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8199dd5d9c69fbb",
            "owner_id": "278365670419",
            "tags": {
              "name": "my vpc"
            },
            "tags_all": {
              "name": "my vpc"
            }
          }
        }
      ]
    }
  ]
}